--- a/s.yaml
+++ b/s.yaml
@@ -2,9 +2,12 @@
 - hosts: all
   become: yes
   tasks:
-   - name: Install apache2 on ubuntu nodes
+   - name: Install apache2 on ubuntu node
      apt:
        name: apache2
        state: present
 
- 
+   - name: i want to start apache2 on ubuntu node
+     service:
+      name: apache2
+      state: started
